--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,7 @@
 {
     // Current configurations made for each input domain
     // Arguments: 
-    // 1. File name
+    // 1. Input domain file name (only file name is needed as long as it's in the input domain folder)
     // 2. Test Set Size
     // 3. Population size for Search Based Strategy
     // 4. Amount of generations for Search Based Strategy
@@ -10,81 +10,202 @@
     // 7. Failure Region Type ("point", "box")
     // 8. Amount of failure regions
     // 9. Box Size (for box/strip failure regions only)
+    // 10. Output file (Will automatically output to the results folder)
     
-    "version": "0.2.0",
+    "version": "0.05.0",
     "configurations": [
-        
         {
             "type": "java",
-            "name": "1d-100",
+            "name": "1d-100-point",
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["1d-100.csv","20","10","100","2","0.2","strip","1", "1"]
+            "args": ["1d-100.csv","10","1000","1000","2","0.05","point","10", "1","1d-100-point.csv"]
         },
         {
             "type": "java",
-            "name": "2d-100",
+            "name": "1d-100-box",
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-100.csv","20","10","100","2","0.2","strip","2", "1"]
+            "args": ["1d-100.csv","10","1000","1000","2","0.05","box","1", "3","1d-100-box.csv"]
         },
         {
             "type": "java",
-            "name": "3d-100",
+            "name": "2d-100-point",
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["3d-100.csv","20","10","100","2","0.2","strip","3", "1"]
+            "args": ["2d-100.csv","10","1000","1000","2","0.05","point","10", "1","2d-100-point.csv"]
         },
         {
             "type": "java",
-            "name": "1d-1000",
+            "name": "2d-100-box",
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["1d-1000.csv","20","10","100","2","0.2","box","2", "1"]
+            "args": ["2d-100.csv","10","1000","1000","2","0.05","box","1", "3","2d-100-box.csv"]
         },
         {
             "type": "java",
-            "name": "2d-1000",
+            "name": "2d-100-strip",
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-1000.csv","10","10","100","1","0.2","box","2", "5"]
+            "args": ["2d-100.csv","10","1000","1000","2","0.05","strip","1", "1","2d-100-strip.csv"]
         },
         {
             "type": "java",
-            "name": "3d-1000",
+            "name": "3d-125-point",
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["3d-1000.csv","20","10","100","2","0.2","box","2","1"]
+            "args": ["3d-125.csv","10","1000","1000","2","0.05","point","10", "1","3d-125-point.csv"]
         },
         {
             "type": "java",
-            "name": "1d-10000",
+            "name": "3d-125-box",
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["1d-10000.csv","20","10","100","2","0.2","box","2","1"]
+            "args": ["3d-125.csv","10","1000","1000","2","0.05","box","1", "2","3d-125-box.csv"]
         },
         {
             "type": "java",
-            "name": "2d-10000",
+            "name": "3d-125-strip",
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-10000.csv","20","10","100","2","0.2","box","2","1"]
+            "args": ["3d-125.csv","10","1000","1000","2","0.05","strip","1", "2","3d-125-strip.csv"]
         },
         {
             "type": "java",
-            "name": "3d-10000",
+            "name": "1d-1000-point",
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["3d-10000.csv","20","10","100","2","0.2","box","2","1"]
+            "args": ["1d-1000.csv","10","1000","1000","2","0.05","point","100", "1","1d-1000-point.csv"]
+        },
+        {
+            "type": "java",
+            "name": "1d-1000-box",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["1d-1000.csv","10","1000","1000","2","0.05","box","1", "100","1d-1000-box.csv"]
+        },
+        {
+            "type": "java",
+            "name": "2d-1024-point",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["2d-1024.csv","10","1000","1000","2","0.05","point","100", "1","2d-1024-point.csv"]
+        },
+        {
+            "type": "java",
+            "name": "2d-1024-box",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["2d-1024.csv","10","1000","1000","2","0.05","box","1", "10","2d-1024-box.csv"]
+        },
+        {
+            "type": "java",
+            "name": "2d-1024-strip",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["2d-1024.csv","10","1000","1000","2","0.05","strip","1", "4","2d-1024-strip.csv"]
+        },
+        {
+            "type": "java",
+            "name": "3d-1000-point",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["3d-1000.csv","10","1000","1000","2","0.05","point","100","1","3d-1000-point.csv"]
+        },
+        // 125 errors
+        {
+            "type": "java",
+            "name": "3d-1000-box",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["3d-1000.csv","10","1000","1000","2","0.05","box","1","5","3d-1000-box.csv"]
+        },
+        {
+            "type": "java",
+            "name": "3d-1000-strip",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["3d-1000.csv","10","1000","1000","2","0.05","strip","1","3","3d-1000-strip.csv"]
+        },
+        {
+            "type": "java",
+            "name": "1d-10000-point",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["1d-10000.csv","10","1000","1000","2","0.05","point","1000","1","1d-10000-point.csv"]
+        },
+        {
+            "type": "java",
+            "name": "1d-10000-box",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["1d-10000.csv","10","1000","1000","2","0.05","box","1","1000","1d-10000-box.csv"]
+        },
+        {
+            "type": "java",
+            "name": "2d-10000-point",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["2d-10000.csv","10","1000","1000","2","0.05","point","1000","1","2d-10000-point.csv"]
+        },
+        {
+            "type": "java",
+            "name": "2d-10000-box",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["2d-10000.csv","10","1000","1000","2","0.05","box","1","32","2d-10000-box.csv"]
+        },
+        {
+            "type": "java",
+            "name": "2d-10000-strip",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["2d-10000.csv","10","1000","1000","2","0.05","strip","1","10","2d-10000-strip.csv"]
+        },
+        {
+            "type": "java",
+            "name": "3d-10648-point",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["3d-10648.csv","10","1000","1000","2","0.05","point","1000","1","3d-10648-point.csv"]
+        },
+        {
+            "type": "java",
+            "name": "3d-10648-box",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["3d-10648.csv","10","1000","1000","2","0.05","box","1","10","3d-10648-box.csv"]
+        },
+        {
+            "type": "java",
+            "name": "3d-10648-strip",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "acc19hy_dissertation_14d765a",
+            "args": ["3d-10648.csv","10","1000","1000","2","0.05","strip","1","7","3d-10648-strip.csv"]
         }
     ]
 }
