--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
     // 4. Amount of generations for Search Based Strategy
     // 5. Amount of parents for Search Based Strategy
     // 6. Mutation Probability for Search Based Strategy
-    // 7. Failure Region Type ("point", "box")
+    // 7. Failure Region Type ("point", "box", "strip")
     // 8. Amount of failure regions
     // 9. Box Size (for box/strip failure regions only)
     // 10. Output file (Will automatically output to the results folder)
@@ -20,7 +20,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["1d-100.csv","10","1000","1000","2","0.05","point","10", "1","1d-100-point.csv"]
+            "args": ["1d-100.csv","10","1000","1000","2","0.05","point","5", "1","1d-100-point.csv"]
         },
         {
             "type": "java",
@@ -28,7 +28,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["1d-100.csv","10","1000","1000","2","0.05","box","1", "3","1d-100-box.csv"]
+            "args": ["1d-100.csv","10","1000","1000","2","0.05","box","1", "5","1d-100-box.csv"]
         },
         {
             "type": "java",
@@ -36,7 +36,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-100.csv","10","1000","1000","2","0.05","point","10", "1","2d-100-point.csv"]
+            "args": ["2d-100.csv","10","1000","1000","2","0.05","point","5", "1","2d-100-point.csv"]
         },
         {
             "type": "java",
@@ -44,7 +44,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-100.csv","10","1000","1000","2","0.05","box","1", "3","2d-100-box.csv"]
+            "args": ["2d-100.csv","10","1000","1000","2","0.05","box","1", "2","2d-100-box.csv"]
         },
         {
             "type": "java",
@@ -68,7 +68,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["3d-125.csv","10","1000","1000","2","0.05","box","1", "2","3d-125-box.csv"]
+            "args": ["3d-125.csv","10","1000","1000","2","0.05","box","5", "1","3d-125-box.csv"]
         },
         {
             "type": "java",
@@ -76,7 +76,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["3d-125.csv","10","1000","1000","2","0.05","strip","1", "2","3d-125-strip.csv"]
+            "args": ["3d-125.csv","10","1000","1000","2","0.05","strip","1", "1","3d-125-strip.csv"]
         },
         {
             "type": "java",
@@ -84,7 +84,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["1d-1000.csv","10","1000","1000","2","0.05","point","100", "1","1d-1000-point.csv"]
+            "args": ["1d-1000.csv","10","1000","1000","2","0.05","point","50", "1","1d-1000-point.csv"]
         },
         {
             "type": "java",
@@ -92,7 +92,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["1d-1000.csv","10","1000","1000","2","0.05","box","1", "100","1d-1000-box.csv"]
+            "args": ["1d-1000.csv","10","1000","1000","2","0.05","box","1", "50","1d-1000-box.csv"]
         },
         {
             "type": "java",
@@ -100,7 +100,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-1024.csv","10","1000","1000","2","0.05","point","100", "1","2d-1024-point.csv"]
+            "args": ["2d-1024.csv","10","1000","1000","2","0.05","point","50", "1","2d-1024-point.csv"]
         },
         {
             "type": "java",
@@ -108,7 +108,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-1024.csv","10","1000","1000","2","0.05","box","1", "10","2d-1024-box.csv"]
+            "args": ["2d-1024.csv","10","1000","1000","2","0.05","box","1", "7","2d-1024-box.csv"]
         },
         {
             "type": "java",
@@ -116,7 +116,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-1024.csv","10","1000","1000","2","0.05","strip","1", "4","2d-1024-strip.csv"]
+            "args": ["2d-1024.csv","10","1000","1000","2","0.05","strip","1", "2","2d-1024-strip.csv"]
         },
         {
             "type": "java",
@@ -133,7 +133,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["3d-1000.csv","10","1000","1000","2","0.05","box","1","5","3d-1000-box.csv"]
+            "args": ["3d-1000.csv","10","1000","1000","2","0.05","box","1","4","3d-1000-box.csv"]
         },
         {
             "type": "java",
@@ -141,7 +141,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["3d-1000.csv","10","1000","1000","2","0.05","strip","1","3","3d-1000-strip.csv"]
+            "args": ["3d-1000.csv","10","1000","1000","2","0.05","strip","1","2","3d-1000-strip.csv"]
         },
         {
             "type": "java",
@@ -149,7 +149,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["1d-10000.csv","10","1000","1000","2","0.05","point","1000","1","1d-10000-point.csv"]
+            "args": ["1d-10000.csv","10","1000","1000","2","0.05","point","500","1","1d-10000-point.csv"]
         },
         {
             "type": "java",
@@ -157,7 +157,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["1d-10000.csv","10","1000","1000","2","0.05","box","1","1000","1d-10000-box.csv"]
+            "args": ["1d-10000.csv","10","1000","1000","2","0.05","box","1","500","1d-10000-box.csv"]
         },
         {
             "type": "java",
@@ -165,7 +165,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-10000.csv","10","1000","1000","2","0.05","point","1000","1","2d-10000-point.csv"]
+            "args": ["2d-10000.csv","10","1000","1000","2","0.05","point","500","1","2d-10000-point.csv"]
         },
         {
             "type": "java",
@@ -173,7 +173,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-10000.csv","10","1000","1000","2","0.05","box","1","32","2d-10000-box.csv"]
+            "args": ["2d-10000.csv","10","1000","1000","2","0.05","box","1","23","2d-10000-box.csv"]
         },
         {
             "type": "java",
@@ -181,7 +181,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["2d-10000.csv","10","1000","1000","2","0.05","strip","1","10","2d-10000-strip.csv"]
+            "args": ["2d-10000.csv","10","1000","1000","2","0.05","strip","1","5","2d-10000-strip.csv"]
         },
         {
             "type": "java",
@@ -189,7 +189,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["3d-10648.csv","10","1000","1000","2","0.05","point","1000","1","3d-10648-point.csv"]
+            "args": ["3d-10648.csv","10","1000","1000","2","0.05","point","500","1","3d-10648-point.csv"]
         },
         {
             "type": "java",
@@ -205,7 +205,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "acc19hy_dissertation_14d765a",
-            "args": ["3d-10648.csv","10","1000","1000","2","0.05","strip","1","7","3d-10648-strip.csv"]
+            "args": ["3d-10648.csv","10","1000","1000","2","0.05","strip","1","5","3d-10648-strip.csv"]
         }
     ]
 }
